--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap"
+        rel="stylesheet">
+    <title>Rock Paper Scissors</title>
 </head>
+
 <body>
-    
-    <script src="index.js"></script>
+
+    <div class="container">
+        <div class="header">
+            <h1>ROCK, PAPER & SCISSORS</h1>
+            <h3>First to 5 points Wins</h3>
+        </div>
+
+        <p id="output"></p>
+        
+        <div class="score">
+            <p class="playerScore">Player Score: </p>
+            <p class="computerScore">Computer Score: </p>
+        </div>
+
+        <div class="Choice">
+            <h4>Rock, Paper, or Scissors</h4>
+            <div class="buttons">
+                <button id="rock">
+                    &#9994;
+                </button>
+                <button id="paper">
+                    &#9995;
+                </button>
+                <button id="scissors">
+                    &#9996;
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <script src="index.js" type="module"></script>
 </body>
+
 </html>
