--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         <p id="output"></p>
         
         <div class="score">
-            <p class="playerScore">Player Score: </p>
-            <p class="computerScore">Computer Score: </p>
+            <p>Player Score: <span class="playerScore"></span></p>
+            <p>Computer Score: <span class="computerScore"></span></p>
         </div>
 
         <div class="Choice">
             <h4>Rock, Paper, or Scissors</h4>
             <div class="buttons">
-                <button id="rock">
+                <button class="rock">
                     &#9994;
                 </button>
-                <button id="paper">
+                <button class="paper">
                     &#9995;
                 </button>
-                <button id="scissors">
+                <button class="scissors">
                     &#9996;
                 </button>
             </div>
