--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p id="output"></p>
         
         <div class="score">
-            <p>Player Score: <span class="playerScore"></span></p>
-            <p>Computer Score: <span class="computerScore"></span></p>
+            <p>Player Score: <span class="playerScore">0</span></p>
+            <p>Computer Score: <span class="computerScore">0</span></p>
         </div>
 
         <div class="Choice">
