modified the logic to play the game

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <body>
 
     <div class="container">
+        <div id="modal">
+              <div class="modalContent">
+                  <h1></h1>
+                  <h2></h2>
+                  <button id="playAgain">Play Again</button>
+              </div>
+        </div>
         <div class="header">
             <h1>ROCK, PAPER & SCISSORS</h1>
             <h3>First to 5 points Wins</h3>
